Bug 1668707: When deciding whether to create a div Accessible, skip the first/last child if it's invisible and consider inline-block, etc. r=MarcoZ

1. Text nodes can be created in the DOM just because there was white space in the source, but this isn't always visible.
    We shouldn't create an Accessible in the invisible case.
    However, there could be an inline frame after/before an invisible text node, so we still need to check for that.

2. We should create div Accessibles if there are inline-block children such as buttons.
    Previously, we weren't doing this because these aren't caught by IsInlineFrame.
    We now use IsInlineOutside, which also catches text and br.
    Aside from being a bug, this fix was needed in this patch to fix tests which previously created div Accessibles because of invisible text nodes, but lost the Accessibles once this was fixed.

3. Similarly, we should create div Accessibles if there is a previous text sibling.
    Again, IsInlineFrame wasn't catching these, but IsInlineOutside does.

4. Adjust various tests to fix assumptions based on the previous behaviour.
    Some needed role="none" to force flattening, while some needed an id to force creation.

Differential Revision: https://phabricator.services.mozilla.com/D92170