accessible/base/MarkupMap.h
@@ -90,33 +90,45 @@ MARKUPMAP(
       nsIContent* prevSibling = aElement->GetPreviousSibling();
       if (prevSibling) {
         nsIFrame* prevSiblingFrame = prevSibling->GetPrimaryFrame();
-        if (prevSiblingFrame && prevSiblingFrame->IsInlineFrame()) {
+        if (prevSiblingFrame && prevSiblingFrame->IsInlineOutside()) {
           return new HyperTextAccessibleWrap(aElement, aContext->Document());
         }
       }
       // Now, check the children.
       nsIContent* firstChild = aElement->GetFirstChild();
       if (firstChild) {
-        // Render it if it is a text node.
-        if (firstChild->IsText()) {
-          return new HyperTextAccessibleWrap(aElement, aContext->Document());
+        nsIFrame* firstChildFrame = firstChild->GetPrimaryFrame();
+        if (!firstChildFrame) {
+          // The first child is invisible, but this might be due to an
+          // invisible text node. Try the next.
+          firstChild = firstChild->GetNextSibling();
+          if (!firstChild) {
+            // If there's no next sibling, there's only one child, so there's
+            // nothing more we can do.
+            return nullptr;
+          }
+          firstChildFrame = firstChild->GetPrimaryFrame();
         }
         // Check to see if first child has an inline frame.
-        nsIFrame* firstChildFrame = firstChild->GetPrimaryFrame();
-        if (firstChildFrame && (firstChildFrame->IsInlineFrame() ||
-                                firstChildFrame->IsBrFrame())) {
+        if (firstChildFrame && firstChildFrame->IsInlineOutside()) {
           return new HyperTextAccessibleWrap(aElement, aContext->Document());
         }
         nsIContent* lastChild = aElement->GetLastChild();
-        if (lastChild && lastChild != firstChild) {
-          // Render it if it is a text node.
-          if (lastChild->IsText()) {
-            return new HyperTextAccessibleWrap(aElement, aContext->Document());
+        MOZ_ASSERT(lastChild);
+        if (lastChild != firstChild) {
+          nsIFrame* lastChildFrame = lastChild->GetPrimaryFrame();
+          if (!lastChildFrame) {
+            // The last child is invisible, but this might be due to an
+            // invisible text node. Try the next.
+            lastChild = lastChild->GetPreviousSibling();
+            MOZ_ASSERT(lastChild);
+            if (lastChild == firstChild) {
+              return nullptr;
+            }
+            lastChildFrame = lastChild->GetPrimaryFrame();
           }
           // Check to see if last child has an inline frame.
-          nsIFrame* lastChildFrame = lastChild->GetPrimaryFrame();
-          if (lastChildFrame && (lastChildFrame->IsInlineFrame() ||
-                                 lastChildFrame->IsBrFrame())) {
+          if (lastChildFrame && lastChildFrame->IsInlineOutside()) {
             return new HyperTextAccessibleWrap(aElement, aContext->Document());
           }
         }
