accessible/base/nsAccessibilityService.cpp
@@ -26,6 +26,7 @@
 #include "nsAttrName.h"
 #include "nsDOMTokenList.h"
 #include "nsEventShell.h"
+#include "nsIFrameInlines.h"
 #include "nsTextFormatter.h"
 #include "OuterDocAccessible.h"
 #include "Role.h"
